--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 Django==1.4.3
 South==0.8.2
+dj-database-url==0.2.2
+dj-static==0.0.5
 django-social-auth==0.7.28
+django-toolbelt==0.0.1
+gunicorn==18.0
 httplib2==0.8
 oauth2==1.5.211
 psycopg2==2.5.1
 python-openid==2.2.5
+static==0.4
+wsgiref==0.1.2
